<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDisplay">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="center"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:scaleType="fitCenter"
                android:src="@drawable/load_image"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvReleased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_release_date"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_runtime"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_genre"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_director"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvWriter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_writer"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_plot"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvImdbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_rated"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvProduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_production"
                android:textColor="@color/black" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>