<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListDisplay"
    android:layout_gravity="center_horizontal">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/movie_back"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />
    <Button
        android:id="@+id/buSearchAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_again"
        android:onClick="buSearchAgain"
        android:background="@drawable/ripple"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginEnd="40dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tvResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buSearchAgain"
        android:text="@string/number_of_results"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvResults">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/buPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_page"
        android:layout_marginEnd="40dp"
        android:onClick="buPrev"
        android:textColor="@color/white"
        android:padding="16dp"
        android:textStyle="bold"
        android:background="@drawable/ripple"
        tools:ignore="ButtonStyle"
        android:layout_below="@+id/wrapper"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/buNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_page"
        android:layout_marginStart="40dp"
        android:onClick="buNext"
        android:textColor="@color/white"
        android:padding="16dp"
        android:textStyle="bold"
        android:background="@drawable/ripple"
        tools:ignore="ButtonStyle"
        android:layout_below="@+id/wrapper"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>