<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity" >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/movie"
        android:scaleType="fitXY"
        android:alpha="0.85"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/etQuery"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/etSearch"
            android:textColorHint="#E49A04"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:elevation="8dp"
            android:onClick="buSearch"
            android:background="@null"
            android:text="@string/search"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/tvEmptyQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:visibility="invisible"
            android:text="@string/empty_query"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>